updated modal box w/ updated bio.  changed close button to scale on hover. changed display of .md-modal to acccomodate for more text to prevent horizontal scroll

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -396,7 +396,8 @@ aside button:hover, .projectDetails:hover{
 	left:0;
 	top:0;
 	width:100%;
-	height:100%;
+	height: 100%;
+	max-height:100vh;
 	overflow: auto;
 	background-color: rgba(0,0,0,0.4);
 	transition: all 5s;
@@ -404,13 +405,21 @@ aside button:hover, .projectDetails:hover{
 }
 .modal-content {
 	background-color: rgba(264, 264, 264, .90);
-	margin: 15% auto;
+	margin: auto;
+	align-items: center;
 	padding: 2.6rem;
 	border: 1px solid #FE80FE;
 	border-radius: .2rem;
 	width: 80%;
 	font-size: 1.3rem;
 	color: black;
+	max-height: 100vh;
+	z-index:2000;
+}
+.md-modal{
+	height: 100%;
+    display: flex;
+    align-content: center;
 }
 .close {
 	float:right;
@@ -422,7 +431,7 @@ aside button:hover, .projectDetails:hover{
 	right: -1rem;
 }
 .close:hover{
-	font-size: 2.75rem;
+	transform: scale(1.2);
 }
 .hiddenVideo{
 	display: none;
